# zci

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.md  setup.cfg  setup.py
docs/: conf.py  index.rst  origin.rst
docs/source/: conf.py
zci/: __init__.py  compat.py  test_smoke.py  tests.py
