[metadata]
name=zci
version=0.1
author=Zygmunt Krynicki
author-email=zkrynicki@gmail.com
summary=Zygmunt Krynicki's CI Toolkit
description-file=README.md
license=AGPLv3+
requires-dist=setuptools
classifier=
    Development Status :: 1 - Planning
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: Utilities
url=https://github.com/zci/zci

[upload]
sign=True

[files]
packages = zci
